@@ -1,3 +1,8 @@
+2008-09-01  Werner Koch  <wk@g10code.com>
+
+	* assuan-io.c: Include time.h.  Fixes bug#951.
+	(_assuan_usleep): Use nanosleep only is available.
+
 2008-03-25  Marcus Brinkmann  <marcus@g10code.de>
 
 	* assuan-inquire.c (assuan_inquire): Loop over _assuan_read_line
